addons/kube-prometheus-stack/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: https
  hostnames:
    - prometheus.nodes.ee
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
